--- a/AppGestionBancaria/AppGestionBancaria.csproj
+++ b/AppGestionBancaria/AppGestionBancaria.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config" />
+    <Content Include="Web\Default.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Modelo\Ahorros.cs" />
@@ -65,6 +66,13 @@
     <Compile Include="Modelo\Corrientes.cs" />
     <Compile Include="Modelo\Cuentas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Web\Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Web\Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Web.Debug.config">
@@ -76,7 +84,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Datos\" />
-    <Folder Include="Web\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
